fix spacing on data and test_gallery pages

--- a/src/static/css/carousel.css
+++ b/src/static/css/carousel.css
@@ -86,6 +86,6 @@ body {
 
 @media (min-width: 62em) {
   .featurette-heading {
-    margin-top: 7rem;
+    margin-top: 0rem;
   }
 }
